--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -51,10 +51,10 @@
 <script id="contact-list-template" type="x-tmpl-mustache">
     <a class="list-group-item list-group-item-action my-1 mx-auto" data-target="{{ID}}" style="width:100%; cursor:pointer;width:95%">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-12 col-lg-4">
                 <img src="{{ProfileImagePath}}" alt="Alternate Text" class="rounded" style="max-height:100px" />
             </div>
-            <div class="col-md-8 px-3">
+            <div class="col-sm-12 col-md-12 col-lg-8 px-3">
                 <div class="px-3">
                     <h6 class="">{{LastName}} {{FirstName}}</h6>
                     <span class="text-muted">{{PhoneNumber}}</span> <br />
