--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -142,7 +142,7 @@
                         <div class="input-group">
                             <input id="new-group-name" type="text" class="form-control" placeholder="Group Name">
                             <span class="input-group-btn">
-                                <button id="add-group" type="button" class="btn btn-secondary btn-info" style="cursor:pointer;">
+                                <button id="add-group-btn" type="button" class="btn btn-secondary btn-info" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Add group">
                                     <i class="fa fa-plus"></i>
                                 </button>
                             </span>
@@ -172,12 +172,12 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="float-left">
-                            <h6 class="card-title">
+                            <h5 class="card-title">
                                 <i class="fa fa-phone" aria-hidden="true"></i> Phone numbers
-                            </h6>
+                            </h5>
                         </div>
                         <div class="float-right">
-                            <button id="add-phone-btn" type="button" class="btn btn-info">
+                            <button id="add-phone-btn" type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Add phone number">
                                 <i class="fa fa-plus"></i>
                             </button>
                         </div>
@@ -206,12 +206,12 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="float-left">
-                            <h6 class="card-title">
+                            <h5 class="card-title">
                                 <i class="fa fa-envelope" aria-hidden="true"></i> Email
-                            </h6>
+                            </h5>
                         </div>
                         <div class="float-right">
-                            <button id="add-email-btn" type="button" class="btn btn-info btn-sm">
+                            <button id="add-email-btn" type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Add email address">
                                 <i class="fa fa-plus"></i>
                             </button>
                         </div>
@@ -240,8 +240,9 @@
     }
 </div>
 
+@Scripts.Render("~/bundles/globalScript")
 <script type="text/javascript" src="/Scripts/Web/Contacts/create.js"></script>
-<script type="text/javascript" src="/Scripts/file-processing.js"></script>
+<script type="text/javascript" src="/Scripts/Web/file-processing.js"></script>
 @Scripts.Render("~/bundles/jqueryval")
 
 
