--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -185,26 +185,27 @@
                     </div>
                     <div class="card-body">
                         <ul id="phone-list" style="list-style-type:none">
-                            @foreach (var phone in Model.PhoneNumbers)
+                            @* For loop is used because of model binding. *@
+                            @for (int i = 0; i < Model.PhoneNumbers.Count; i++)
                             {
                                 <li class="row phone-list-item mb-1">
                                     <div class="col-sm-4 col-md-4 col-lg-4">
-                                        @Html.DatalistFor(model => phone.NumberType, (IEnumerable<string>)ViewBag.NumberTypeList, new { @class = "form-control", placeholder = "Type" })
-                                        @Html.ValidationMessageFor(model => phone.NumberType, "", new { @class = "text-danger" })
+                                        @Html.DatalistFor(model => Model.PhoneNumbers[i].NumberType, (IEnumerable<string>)ViewBag.NumberTypeList, new { @class = "form-control", placeholder = "Type" })
+                                        @Html.ValidationMessageFor(model => Model.PhoneNumbers[i].NumberType, "", new { @class = "text-danger" })
                                     </div>
                                     <div class="col-sm-8 col-md-8 col-lg-8">
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                @Html.RadioButtonFor(m => phone.Default, phone.Default)
+                                                @Html.RadioButtonFor(m => Model.PhoneNumbers[i].IsDefault, Model.PhoneNumbers[i].IsDefault, new { @class="phone-default-rb" })
                                             </span>
-                                            @Html.EditorFor(m => phone.Number, new { htmlAttributes = new { @class = "form-control", placeholder = "Phone number" } })                                            
+                                            @Html.EditorFor(m => Model.PhoneNumbers[i].Number, new { htmlAttributes = new { @class = "form-control", placeholder = "Phone number" } })                                            
                                             <span class="input-group-btn">
                                                 <button type="button" class="btn btn-secondary btn-danger btn-remove-phone" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Remove phone number">
                                                     <i class="fa fa-remove"></i>
                                                 </button>
                                             </span>
                                         </div>                                        
-                                        @Html.ValidationMessageFor(model => phone.Number, "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(model => Model.PhoneNumbers[i].Number, "", new { @class = "text-danger" })
                                     </div>
                                 </li>
                             }
@@ -228,26 +229,26 @@
                     </div>
                     <div class="card-body">
                         <ul id="email-list" style="list-style-type:none">
-                            @foreach (var email in Model.Emails)
-                            {
+                            @for (int i = 0; i < Model.Emails.Count; i++)
+                            {                                
                                 <li class="row email-list-item mb-1">
                                     <div class="col-sm-4 col-md-4 col-lg-4">
-                                        @Html.DatalistFor(model => email.EmailAddressType, (IEnumerable<string>)ViewBag.EmailAddressTypeList, new { @class="form-control", placeholder="Type"})
-                                        @Html.ValidationMessageFor(model => email.EmailAddressType, "", new { @class = "text-danger" })
+                                        @Html.DatalistFor(model => Model.Emails[i].EmailAddressType, (IEnumerable<string>)ViewBag.EmailAddressTypeList, new { @class="form-control", placeholder="Type"})
+                                        @Html.ValidationMessageFor(model => Model.Emails[i].EmailAddressType, "", new { @class = "text-danger" })
                                     </div>
                                     <div class="col-sm-8 col-md-8 col-lg-8">
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                @Html.RadioButtonFor(m => email.Default, email.Default)
+                                                @Html.RadioButtonFor(m => Model.Emails[i].IsDefault, Model.Emails[i].IsDefault)
                                             </span>
-                                            @Html.EditorFor(m => email.Address, new { htmlAttributes = new { @class = "form-control", placeholder = "Email address" } })
+                                            @Html.EditorFor(m => Model.Emails[i].Address, new { htmlAttributes = new { @class = "form-control", placeholder = "Email address" } })
                                             <span class="input-group-btn">
                                                 <button type="button" class="btn btn-secondary btn-danger btn-remove-email" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Remove email address">
                                                     <i class="fa fa-remove"></i>
                                                 </button>
                                             </span>
                                         </div>
-                                        @Html.ValidationMessageFor(model => email.Address, "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(model => Model.Emails[i].Address, "", new { @class = "text-danger" })
                                     </div>                                    
                                 </li>
                             }
