--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <script id="contact-list-template" type="x-tmpl-mustache">
-    <a class="list-group-item list-group-item-action my-1 mx-auto" data-target="{{ID}}" style="width:100%; cursor:pointer;width:95%">
+    <a class="list-group-item list-group-item-action my-1 mx-auto list-item-contact" data-target="{{ID}}" style="width:100%; cursor:pointer;width:95%">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <img src="{{ProfileImagePath}}" alt="Alternate Text" class="rounded" style="max-height:100px" />
