--- a/AddressBook/Views/Contacts/_Edit.cshtml
+++ b/AddressBook/Views/Contacts/_Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AddressBook.ViewModels.ContactEditViewModel
 
 <div class="row card bg-light col-lg-12 py-2">
-    @using (Html.BeginForm("Create", "Contacts", FormMethod.Post, new { id = "create-contact", @class = "form-horizontal" }))
+    @using (Html.BeginForm("Edit", "Contacts", routeValues: new { id = Model.ID}, method: FormMethod.Post, htmlAttributes: new { id = "contact-crud", @class = "form-horizontal" }))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -152,12 +152,15 @@
                     </div>
                     <div class="card-block">
                         <ul id="group-list" class="list-group" style="overflow-y:auto;max-height:250px">
-                            @foreach (var item in Model.Groups)
+                            @foreach (var group in (List<AddressBook.Models.Group>)ViewBag.AllGroups)
                             {
+                                // Check if contact contains group. If does, then check checkbox
+                                bool groupAssigned = Model.Groups.Contains(group);
+
                                 <li class="list-group-item">
                                     <label class="form-check-label" style="cursor:pointer">
-                                        <input class="form-check-input" type="checkbox" name="AllGroups" value="@item.ID">
-                                        @item.Name
+                                        <input class="form-check-input" type="checkbox" name="AllGroups" value="@group.ID" @Html.Raw(groupAssigned ? "checked='checked'" : "")>
+                                        @group.Name
                                     </label>
                                     <span class="fa fa-remove pull-right remove-group-btn" style="cursor:pointer;color:darkred"></span>
                                 </li>
@@ -196,7 +199,7 @@
                                     <div class="col-sm-8 col-md-8 col-lg-8">
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                @Html.RadioButtonFor(m => Model.PhoneNumbers[i].IsDefault, Model.PhoneNumbers[i].IsDefault, new { @class="phone-default-rb" })
+                                                @Html.RadioButton($"PhoneNumbers[{i.ToString()}].IsDefault", true, Model.PhoneNumbers[i].IsDefault.Value)
                                             </span>
                                             @Html.EditorFor(m => Model.PhoneNumbers[i].Number, new { htmlAttributes = new { @class = "form-control", placeholder = "Phone number" } })                                            
                                             <span class="input-group-btn">
@@ -230,16 +233,17 @@
                     <div class="card-body">
                         <ul id="email-list" style="list-style-type:none">
                             @for (int i = 0; i < Model.Emails.Count; i++)
-                            {                                
+                            {
+                                var email = Model.Emails[i].IsDefault;
                                 <li class="row email-list-item mb-1">
                                     <div class="col-sm-4 col-md-4 col-lg-4">
                                         @Html.DatalistFor(model => Model.Emails[i].EmailAddressType, (IEnumerable<string>)ViewBag.EmailAddressTypeList, new { @class="form-control", placeholder="Type"})
                                         @Html.ValidationMessageFor(model => Model.Emails[i].EmailAddressType, "", new { @class = "text-danger" })
                                     </div>
                                     <div class="col-sm-8 col-md-8 col-lg-8">
-                                        <div class="input-group">
+                                        <div class="input-group">                                            
                                             <span class="input-group-addon">
-                                                @Html.RadioButtonFor(m => Model.Emails[i].IsDefault, Model.Emails[i].IsDefault)
+                                                @Html.RadioButton($"Emails[{i.ToString()}].IsDefault", true, Model.Emails[i].IsDefault.Value)
                                             </span>
                                             @Html.EditorFor(m => Model.Emails[i].Address, new { htmlAttributes = new { @class = "form-control", placeholder = "Email address" } })
                                             <span class="input-group-btn">
