Redesign create form

--- a/AddressBook/Views/Contacts/_Details.cshtml
+++ b/AddressBook/Views/Contacts/_Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddressBook.ViewModels.ContactDetailsViewModel
+﻿@model AddressBook.Models.Contact
 
 <div class="card" style="width:400px">
     <img class="card-img-top" src="img_avatar1.png" alt="Card image">
