Redesign edit form

--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
             </button>
         </div>
         <hr />
-        <div class="row pl-4" id="contact-view-panel">
+        <div id="contact-view-panel">
             @* Here is loaded contact view panel for CRUD operations *@
         </div>
     </div>
