--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
     <div class="col-sm-9 col-md-9 col-lg-9">
         <div class="row">
             <button id="create-contact-btn" type="button" class="btn btn-info rounded-circle mx-2" style="cursor:pointer">
-                <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-user-plus fa-2x" aria-hidden="true"></i>
             </button>
         </div>
         <hr />
