--- a/AddressBook/Views/Contacts/_Details.cshtml
+++ b/AddressBook/Views/Contacts/_Details.cshtml
@@ -8,29 +8,61 @@
         <div class="row">
             <!--Begin Image Display-->
             <div class="col-sm-12 col-md-12 col-lg-4">
-                <div class="card" style="">                    
+                <div class="card" style="">
                     <img src="@Url.Content(Model.ProfilePicPath)" alt="Alternate Text" class="card-img-top" style="height:16em" />
-                    <div id="accordion" role="tablist">
+                    <div id="phoneAccordion" role="tablist">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
                                 <h5 class="mb-0">
-                                    @{ 
+                                    @{
                                         var defaultPhone = @Model.PhoneNumbers.FirstOrDefault(p => p.IsDefault == true);
-                                        var otherPhones = @Model.PhoneNumbers.FirstOrDefault(p => p.IsDefault == false || p.IsDefault == null);
+                                        var otherPhones = @Model.PhoneNumbers.Where(p => p.IsDefault == false || p.IsDefault == null);
                                     }
-                                    
-                                    @defaultPhone.NumberType - @defaultPhone.Number
+
+                                    <i class="fa fa-phone" aria-hidden="true"></i> @defaultPhone.NumberType - @defaultPhone.Number
                                     <a data-toggle="collapse" href="#collapsePhoneNumbers" aria-expanded="false" aria-controls="collapsePhoneNumbers" class="float-right text-dark">
                                         <i class="fa fa-angle-down" aria-hidden="true"></i>
                                     </a>
                                 </h5>
                             </div>
-                            <div id="collapsePhoneNumbers" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-                                <div class="card-body">
-                                    
-                                </div>
+                            <div id="collapsePhoneNumbers" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#phoneAccordion">
+                                <ul class="list-group">
+                                    @foreach (var phone in otherPhones)
+                                    {
+                                        <li class="list-group-item">
+                                            <i class="fa fa-phone" aria-hidden="true"></i> @phone.NumberType - @phone.Number
+                                        </li>
+                                    }
+                                </ul>
                             </div>
-                        </div>                    
+                        </div>
+                    </div>
+                    <div id="emailAccordion" role="tablist">
+                        <div class="card">
+                            <div class="card-header" role="tab" id="headingTwo">
+                                <h5 class="mb-0">
+                                    @{
+                                        var defaultEmail = @Model.EmailAddresses.FirstOrDefault(e => e.IsDefault == true);
+                                        var otherEmails = @Model.EmailAddresses.Where(e => e.IsDefault == false || e.IsDefault == null);
+                                    }
+
+                                    <i class="fa fa-envelope" aria-hidden="true"></i> @defaultEmail.EmailAddressType - @defaultEmail.Address
+                                    <a data-toggle="collapse" href="#collapseEmails" aria-expanded="false" aria-controls="collapseEmails" class="float-right text-dark">
+                                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </a>
+                                </h5>
+                            </div>
+                            <div id="collapseEmails" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#emailAccordion">
+                                <ul class="list-group">
+                                    @foreach (var email in otherEmails)
+                                    {
+                                        <li class="list-group-item">
+                                            <i class="fa fa-envelope" aria-hidden="true"></i> @email.EmailAddressType - @email.Address
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <p>@Model.Note </p>
@@ -121,12 +153,12 @@
 <script>
     $(document).ready(function () {
         $('.collapse').on('hidden.bs.collapse', function () {
-            $(this).prev('div[role="tab"]').find('i').toggleClass('fa-flip-vertical')
-            
+            $(this).prev('div[role="tab"]').find('i.fa-angle-down').toggleClass('fa-flip-vertical')
+
         });
         $('.collapse').on('shown.bs.collapse', function () {
-            $(this).prev('div[role="tab"]').find('i').toggleClass('fa-flip-vertical')
-            
+            $(this).prev('div[role="tab"]').find('i.fa-angle-down').toggleClass('fa-flip-vertical')
+
         });
     })
 </script>
